--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,9 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6082315217074810"
+     crossorigin="anonymous"></script>
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/Tape192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -38,6 +41,7 @@
 
       gtag("config", "G-ZE3CP63G9T");
     </script>
+    
 
     <title>USAF WHtR Calculator</title>
   </head>
