--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="Air Force WHtR Calculator"
+      content="The Air Force WHtR(Waist-to-Ratio) calculator measures excess fat distribution in the abdominal region."
     />
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6082315217074810"
      crossorigin="anonymous"></script>
